# HW_Project

./: .gitignore  README.md  我有腾讯和阿里的offer.docx
SDK_C++/CodeCraft-2021/: 1  CodeCraft-2021.cpp  out  out2
SDK_C++/CodeCraft-2021/lib/: 1.cpp  input.cpp  server.cpp  virtualServer.cpp
Src/: 1  CodeCraft-2021.cpp  out  test.cpp  test.in  upload.sh
Src/lib/: buyServer.cpp  delete.cpp  findServer.cpp  init.cpp  input.cpp  move.cpp  moveMark.h  output.cpp  rateSolve.h  request.cpp  request.h  virtualServer.h
backup/: 思路.md
src/: CMakeLists.txt  CodeCraft-2021.cpp  test.cpp
src/lib/: CreateType.h  buyServer.cpp  delete.cpp  findServer.cpp  init.cpp  input.cpp  move.cpp  moveMark.h  output.cpp  rateSolve.h  request.h  server.h  virtualServer.h
src/toolkit/: OfflineJudger.hpp  judge.cpp
submit/CodeCraft-2021/: CodeCraft-2021.cpp
submit/CodeCraft-2021/lib/: CreateType.h  buyServer.cpp  delete.cpp  findServer.cpp  init.cpp  input.cpp  move.cpp  output.cpp  rateSolve.h  request.h  server.cpp  server.h
submit/SDK_C++/CodeCraft-2021/: CodeCraft-2021.cpp
submit/SDK_C++/CodeCraft-2021/lib/: input.cpp  output.cpp  virtualServer.cpp
